--- a/reportpage.html
+++ b/reportpage.html
@@ -28,10 +28,10 @@
     </div>
 
     <div class="text">
-      <p>Здесь будет мой личный отчет о проделанной работе, но пока что тут сгенерированный текст из интернетов. Приятного аппетита.</p>
-      <p>Ceteros assentior omittantur cum ad. Eam id posse dictas voluptua, veniam laoreet oportere no mea, quis regione suscipiantur mea an.</p>
-      <p>Eu cum iuvaret debitis voluptatibus, esse perfecto reformidans id has. Eu eam dolores lobortis percipitur, quo te equidem deleniti disputando.</p>
-      <p>Vel in dicant cetero phaedrum, usu populo interesset cu, eum ea facer nostrum pericula. Postulant assueverit ea his.</p>
+      <p>Я занимаюсь backend разработкой в рамках проекта по дисциплине интернет-технологии.</p>
+      <p>В рамках своей работы я использовал js и node.js для разработки "серверной части" сайта.</p>
+      <p>Участвовал в разработке нормативной документации проекта</p>
+      <p></p>
     </div>
   <!--  <div class="aboutme">
       <h2>IDM-20-03</h2>
