--- a/reportpage.html
+++ b/reportpage.html
@@ -28,9 +28,9 @@
     </div>
 
     <div class="text">
-      <p>Я занимаюсь backend разработкой в рамках проекта по дисциплине интернет-технологии. Выбранный мой стэк разработки для данного проекта представляет собой js + node.js</p>
-      <p>Помимо этого я участвовал в разработке нормативной документации проекта</p>
-      <p></p>
+      <p>Я занимаюсь backend разработкой в рамках проекта по дисциплине интернет-технологии. Выбранный мой стэк разработки для данного проекта представляет собой js + node.js.</p>
+      <p>Взаимодействовал и помогал fronend звену нашего проекта.</p>
+      <p>Помимо этого я участвовал в разработке нормативной документации проекта.</p>
       <p></p>
     </div>
   <!--  <div class="aboutme">
