--- a/reportpage.html
+++ b/reportpage.html
@@ -28,9 +28,11 @@
     </div>
 
     <div class="text">
-      <p>Я занимаюсь backend разработкой в рамках проекта по дисциплине интернет-технологии. Выбранный мой стэк разработки для данного проекта представляет собой js + node.js.</p>
-      <p>Взаимодействовал и помогал fronend звену нашего проекта.</p>
-      <p>Помимо этого я участвовал в разработке нормативной документации проекта.</p>
+      <p>Я занимался backend разработкой в рамках веб-приложения по дисциплине интернет-технологии.</p>
+      <p>Выбранный мной стэк разработки для данного проекта представляет собой: php + mysql, а также веб-сервер Apache.</p>
+      <p>В рамках серверной части разработки - поднял и настроил веб-сервер и субд, реализовал отправку данных из формы на сервер, запись в базу данных.</p>
+      <p>Помимо backend, взаимодействовал и помогал frontend звену нашего проекта.</p>
+      <p>А также участвовал в разработке нормативной документации проекта.</p>
       <p></p>
     </div>
   <!--  <div class="aboutme">
