--- a/reportpage.html
+++ b/reportpage.html
@@ -29,10 +29,9 @@
 
     <div class="text">
       <p>Я занимался backend разработкой в рамках веб-приложения по дисциплине интернет-технологии.</p>
-      <p>Выбранный мной стэк разработки для данного проекта представляет собой: php + mysql, а также веб-сервер Apache.</p>
+      <p>Выбранный мной стэк технологий для данного проекта представляет собой: php + mysql, а также веб-сервер Apache.</p>
       <p>В рамках серверной части разработки - поднял и настроил веб-сервер и субд, реализовал отправку данных из формы на сервер, запись в базу данных.</p>
-      <p>Помимо backend, взаимодействовал и помогал frontend звену нашего проекта.</p>
-      <p>А также участвовал в разработке нормативной документации проекта.</p>
+      <p>Помимо backend, взаимодействовал и помогал frontend звену нашего проекта. А также участвовал в разработке нормативной документации проекта.</p>
       <p></p>
     </div>
   <!--  <div class="aboutme">
